--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,9 @@ body {
 }
 
 :root {
+    --secondTextColor:#B0B0B0;
+    --primaryColor:#F81E1E;
+    --borderColor:#EDEDED;
     --radius: 0.625rem;
     --background: oklch(1 0 0);
     --foreground: oklch(0.145 0 0);
@@ -53,6 +56,7 @@ body {
 }
 
 .dark {
+    
     --background: oklch(0.145 0 0);
     --foreground: oklch(0.985 0 0);
     --card: oklch(0.205 0 0);
@@ -87,6 +91,9 @@ body {
 }
 
 @theme inline {
+    --color-SecondTextColor:var(--secondTextColor);
+    --color-primaryColor:var(--primaryColor);
+    --color-borderColor:var(--borderColor);
     --radius-sm: calc(var(--radius) - 4px);
     --radius-md: calc(var(--radius) - 2px);
     --radius-lg: var(--radius);
@@ -131,4 +138,8 @@ body {
   body {
     @apply bg-background text-foreground;
     }
+}
+
+input:checked{
+  background-color: #D9D9D9;
 }
